# tea_agent

./: .dockerignore  .gitignore  AGENTS.md  C:\Users\Hetin\work\git\zk_ai_server\tmp\fetch_news.py  C:\Users\Hetin\work\git\zk_ai_server\tmp\fetch_news2.py  C:\Users\Hetin\work\git\zk_ai_server\tmp\fetch_news3.py  CHANGELOG.md  DEEPSEEK_REASONING_SUPPORT.md  Dockerfile  FEATURES_NEW.md  IMPLEMENTATION_SUMMARY.md  MANIFEST.in  README.en.md  README.md  README.md.bak.20260516_130246  README.md.bak.20260516_130516  README_EN.md  _deepseek_docs.json  _fetch_deepseek_docs.py  _fetch_deepseek_guides.py  _gen_dag.py  _test_full_pipeline.py  _test_markdown.py  _verify_os.py  analyze_llm_friendly.py  build_mini.py  build_nuitka.py  code_review_report.md  config.yaml  crosscut_scan.py  dag_demo.py  dag_workflow_demo.html  debug_init.py  docker-compose.yml  fix_code.py  fix_newlines.py  fix_w504.py  jandan_full.html  launch_dag_demo.py  make_index.py  (+29 more)
.tea_agent_run/: call_flow.dot  call_graph.json  ctags.json  kb.md  symbol_index.json
agent-calendar-viewer/: main.js  news-fetcher.js  package-lock.json  package.json  preload.js  reader-view.js  start.bat
agent-calendar-viewer/renderer/: app.js  index.html  style.css
android_port/: Makefile  README.md  build.bat  build.sh
android_port/docs/: architecture.md
android_port/tea_agent_android/: gradlew  gradlew.bat  settings.gradle.kts
benchmark/: __init__.py  metrics.py  regression.py  runner.py
benchmark/results/: agentbench_multidomain_20260721_200732.json  agentbench_multidomain_20260721_202050.json  hello_20260721_192152.json  tool_call_accuracy_20260721_200049.json  tool_call_accuracy_20260721_200259.json  tool_call_accuracy_20260721_201207.json  tool_call_accuracy_20260721_201410.json  tool_chain_20260721_200539.json  tool_chain_20260721_201735.json  tool_chain_20260721_202615.json
benchmark/tasks/: agentbench_multidomain.yaml  bug_fix.yaml  code_review.yaml  file_read_write.yaml  hello.yaml  json_parse.yaml  refactor.yaml  search_synthesis.yaml  sort_list.yaml  tool_call_accuracy.yaml  tool_chain.yaml  tool_error_recovery.yaml
demo/: .gitignore  csi300_predictor.py  main.py  news_CSI300.py  requirements.txt  setup_scheduled_task.bat
demo/animator/: README.md  __init__.py  html_generator.py  player.py  recorder.py
demo/animator-studio/: README.md  pyproject.toml  requirements.txt  spec_cli.spec
demo/animator-studio/src/: __init__.py  app.py  cli.py  config.py
demo/animator-studio/src/api/: routes.py
demo/animator-studio/src/core/: animation_dsl.py  generator.py  llm_client.py  llm_prompts.py  recorder.py  script_engine.py
demo/animator-studio/src/web/static/css/: style.css
demo/animator-studio/src/web/static/js/: app.js
demo/animator-studio/src/web/templates/: index.html  player.html  studio.html
demo/animator-studio/tests/: test_api.py
demo/game-of-life/: README.md  index.html
demo/hydra-game/: README.md  index.html
demo/langtons-ant/: README.md  index.html
demo/multi_agent/: README.md  dag_viz_demo.py  server.py
demo/nim-game/: README.md  index.html
demo/snake/: __init__.py  engine.py  main.py  strategies.py  test_headless.py
demo/tetris/: README.md  README_TETRIS.md  debug_keys.py  pyproject.toml  run_tetris.py  test_data.npz  test_tetris.py  test_tetris_simple.py  tetris_ansi.py  tetris_cnn_model.tflite  train_tetris_cnn.py
demo/tetris/tests/: test_tetris.py
deploy/: README.md  nginx.conf  tea-agent.service
docs/: API参考.md  CODE_REVIEW_20260608.md  LLM_OPTIMIZATION_GUIDE.md  TOOLS.md  USER_MANUAL.md  tea_agent_architecture.dot  tea_agent_evolution_roadmap.md  tea_agent_微信接入实战.md  vscode_integration.md  使用手册-Server与Web接口.md  使用手册.md  架构总览.md  模块概览.md  消息渠道接入方案.md  调用图分析.md
gateway/canvas/: index.html
gateway/webui/: index.html
scripts/: cleanup_old_files.py  compact_tool_descriptions.py
sdk/: __init__.py  client.py  pyproject.toml
tea_agent/: __init__.py  agent.py  agent_background.py  agent_core.py  agent_core.py.bak.20260516_193314  agent_evolution.py  agent_pipeline.py  auto_compact.py  auto_fix.py  basesession.py  chat_room_connector.py  cli.py  config.py  config.py.bak.20260517_084646  config.py.bak.20260517_084657  config.py.bak.20260517_084708  config.py.bak.20260517_084722  config.py.bak.20260517_084732  config.py.bak.20260517_084803  config.yaml  cross_topic_summarizer.py  embedding_util.py  gui.py  gui.py.bak.20260516_194010  gui_dialogs.py  gui_dialogs.py.bak.20260516_193647  gui_dialogs.py.bak.20260516_193713  gui_dialogs.py.bak.20260516_193719  gui_dialogs.py.bak.20260516_193738  gui_dialogs.py.bak.20260517_085318  gui_dialogs.py.bak.20260517_085353  gui_dialogs.py.bak.20260517_085414  gui_dialogs.py.bak.20260517_085427  gui_dialogs.py.bak.20260517_085451  gui_dialogs.py.bak.20260517_085504  gui_dialogs.py.bak.20260517_085520  gui_dialogs.py.bak.20260517_085529  gui_dialogs.py.bak.20260517_091314  litesession.py  logging_setup.py  (+81 more)
tea_agent/.tea_agent_run/: README.md  call_flow.dot  call_graph.json  ctags.json  gui_entry_relationship.md  kb.md  project_structure.md  symbol_index.json  (+1 more)
tea_agent_mini/: __init__.py  __main__.py
test/: test_l3_history.py
tests/: conftest.py  test_basesession_utils.py  test_config.py  test_gui_adversarial.py  test_gui_renderer.py  test_lite_agent_e2e.py  test_multi_agent.py  test_queue.py  test_reasoning_content.py  test_server_api.py  test_session_intent.py  test_session_pipeline.py  test_store.py  test_todo_e2e.py  test_tool_build.py  test_topic_switch_no_interrupt.py
(+423 files in other folders)
