[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tea_agent"
version = "0.9.4"
description = "A self-evolving AI agent with dynamic toolkit management. Modular skill system with 47 tools."
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "sunkw", email = "sunkwei@gmail.com" }
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "openai>=1.0.0",
    "numpy>=1.24.0",
    "markdown>=3.4.0",
    "tkinterweb>=3.10",
    
    
    "Pillow>=10.0.0",
    "requests>=2.30.0",
    "beautifulsoup4>=4.12.0",
    "tkhtmlview",
    "jieba>=0.42.0",
    "mcp>=1.0.0",
    "playwright>=1.40.0",
]

[project.scripts]
tea_agent = "tea_agent.gui:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["tea_agent*", "demo*"]
