[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tea_agent"
version = "0.13.8"
description = "A self-evolving AI agent with dynamic toolkit management."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "sunkw", email = "sunkwei@gmail.com" }
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "openai>=1.0.0",
    "httpx>=0.25.0",
    "numpy>=1.24.0",
    "PyYAML>=6.0",
    "markdown>=3.4.0",
    "tkinterweb>=3.10",
    "pyautogui>=0.9.0",
    "mss>=9.0.0",
    "Pillow>=10.0.0",
    "requests>=2.30.0",
    "beautifulsoup4>=4.12.0",
    "jieba>=0.42.0",
    "mcp>=1.0.0",
    "playwright>=1.40.0",
    "jedi>=0.19.0",
    "tree-sitter>=0.21.0",
    "tree-sitter-python>=0.21.0",
    "fpdf2>=2.8.0",
]

[project.scripts]
tea_agent = "tea_agent.server:main"
tea-agent-api = "tea_agent.server:main"
tea-agent-gui = "tea_agent.gui:main"
tea-agent-mini = "tea_agent_mini.__main__:main"
tea-agent-acp = "tea_agent.protocol:main"
tea-agent-telegram = "tea_agent.channel.telegram_adapter:run_telegram_bot"
tea-agent-wechat = "tea_agent.channel.wechat_adapter:run_wechat_bot"

[project.optional-dependencies]
web = [
    "starlette>=0.37.0",
    "uvicorn>=0.27.0",
    "python-multipart>=0.0.7",
]
telegram = [
    "python-telegram-bot>=20.0",
    "httpx>=0.25.0",
]
gui2 = []
mini = [
    "starlette>=0.37.0",
    "uvicorn>=0.27.0",
    "python-multipart>=0.0.7",
]

[tool.ruff]
line-length = 150
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"tea_agent._gui" = ["*.png", "*.ico"]
"tea_agent.server" = ["*.py", "static/*.html", "static/*.js", "static/*.css"]
"tea_agent.skills" = ["**/*.md"]

[tool.setuptools.packages.find]
where = ["."]
include = ["tea_agent*"]
