[project]
name = "animator-studio"
version = "0.1.0"
description = "Web-based animation studio powered by animator engine"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104",
    "uvicorn>=0.24",
    "pywebview>=4.0",
    "playwright>=1.40",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
